# car-co2-prediction

./: .gitignore  .pre-commit-config.yaml  README Pre Commit.md  README-setup.md  README-setup.txt  README.md  pyproject.toml  requirements_base.txt  requirements_development.txt
models/: combustion-encoder.pkl  combustion-scaler.pkl  electric-model.pkl  modelXGBRegressor.pkl  modelsExtraTreeRegressor.pkl  modelsGridSearchCV.pkl
notebooks/: 2025_02_25_Data_Analysis_RK.ipynb  2025_02_25_Data_Analysis_RK_data_23.ipynb  2_0-comb-thom-fuel_type_classif_model.ipynb  2_0-fuel-classification_model_selection.ipynb  2_0-fuel-model_selection.ipynb  data-analysis_french.ipynb  data_analysis.ipynb  data_base_file_generator.ipynb  data_merge_base_files.ipynb  gradient_boosting_regressor.ipynb  handling_nans_and_separating_variables.ipynb  preprocessing_for_predicition_models.ipynb  preprocessing_model_identification.ipynb  streamlit.py  test_jupyter.ipynb
notebooks/app_emulation/: 1_0-prep_pre_analysis.ipynb  1_1-prep_database_file_generator.ipynb  1_2-prep_database_file_merger.ipynb  1_3-prep_data_analysis.ipynb  1_4-prep_database_file_split.ipynb  1_5-electric-preprocessing_train_test_split.ipynb  1_5-model_selection.ipynb  1_5_1-electric-preprocessing_plots.ipynb  2_0-electric-lazy-model_selection.ipynb  2_0-electric-model_selection.ipynb  2_0-fuel-model_selection.ipynb  2_1-electric-model-tuning-neural_network-usampled.ipynb  2_1-electric-model-tuning-neural_network.ipynb  2_1-electric-model-tuning-trees.ipynb  2_2-electric-model-final.ipynb  (+4 more)
reports/: CO2 Defense.pptx
(+14 files in other folders)
